# devops-mcp

./: .env  .gitignore  Dockerfile  Gemfile  README.md  Rakefile  chat-client.rb  compose.yml  config.py  data.json  deploy.sh  main.py  pyproject.toml  requirements.txt  t.py  t.rb  我将按照步骤先列出 Prometheus 的所有可用指标.md  我将查询 `process_cpu_seconds_tota.md  正在分析指标数据.md
k8s/: devops-mcp-deployment.yml  devops-mcp-service.yml
n8n/: compose.yml
prometheus/: compose.yml
prometheus/config/prometheus/: prometheus.yml
prometheus/data/prometheus/data/01JSGY0ETS3B7ETTH8Q1QN45AJ/: index  meta.json
prometheus/data/prometheus/data/01JSGY0ETS3B7ETTH8Q1QN45AJ/chunks/: 000001
prometheus/data/prometheus/data/01JSH4W5N954PKE9KECTABF0AV/: index  meta.json
prometheus/data/prometheus/data/01JSH4W5N954PKE9KECTABF0AV/chunks/: 000001
prometheus/data/prometheus/data/01JSH4W601DZPJTJM9Z1JKFTK0/: index  meta.json
prometheus/data/prometheus/data/01JSH4W601DZPJTJM9Z1JKFTK0/chunks/: 000001
prometheus/data/prometheus/data/01JSHBQX3W74RYY31J0AJ0PNP9/: index  meta.json
prometheus/data/prometheus/data/01JSHBQX3W74RYY31J0AJ0PNP9/chunks/: 000001
prometheus/data/prometheus/data/chunks_head/: 000007
prometheus/data/prometheus/data/wal/: 00000000  00000004  00000005  00000006  00000007
prometheus/data/prometheus/data/wal/checkpoint.00000003/: 00000000
tools/: __init__.py  demo.py  devops.py  greet.py  n9e.py  prometheus.py
