[project]
name = "devops-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "prometheus-api-client>=0.6.0",
]

[tool.uv.sources]
fastmcp = { git = "https://github.com/jlowin/fastmcp.git" }
